tests/rosetta/out/Smalltalk/day-of-the-week.out
/tmp/day-of-the-week.st:16: parse error, expected ']'
