tests/rosetta/out/Smalltalk/day-of-the-week.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| weekday yy mm k j a b c year |
weekday := [:y :m :d | yy := y.
mm := m.
((mm < 3)) ifTrue: [
mm := (mm + 12).
yy := (yy - 1).
] .
k := (yy % 100).
j := (yy / 100) asInteger.
a := (((13 * ((mm + 1)))) / 5) asInteger.
b := (k / 4) asInteger.
c := (j / 4) asInteger.
(((((((((((d + a)) + k)) + b)) + c)) + ((5 * j)))) % 7). ].
2008 to: 2122 do: [:year |.
(((weekday value: year value: 12 value: 25) = 1)) ifTrue: [
Transcript show: ((((('25 December ') + ((year asString)))) + (' is Sunday'))) printString; cr.
] .
].
.
